[package]
name = "util"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
hyper = "0.14.16"
itertools = "0.10.3"
http = "0.2.6"
thiserror = "1.0.30"
sea-orm = "0.6"
serde = "1.0.136"
serde_json = "1.0.79"
