[package]
name = "util"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
hyper = "0.14"
itertools = "0.10"
http = "0.2"
thiserror = "1.0"
sea-orm = "0.6"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.17", features = ["sync", "rt", "macros", "time"] }

[dev-dependencies]
rand = "0.8.5"
