[package]
name = "util"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
hyper = "0.14"
itertools = "0.10"
http = "0.2"
thiserror = "1.0"
sea-orm = "0.8"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.17", features = ["rt", "macros", "time"] }
log = "0.4"
twoway = "0.2.2"

[dev-dependencies]
rand = "0.8"
simple_logger = "2.1.0"
