[package]
name = "http-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["twoway", "hyper"]

[dependencies]
http = "0.2"
itertools = "0.10"
thiserror = "1.0"
twoway = { version = "0.2.2", optional = true }
hyper = { version = "0.14", optional = true }
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
