[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.35", features = ["sync", "macros", "rt", "time"] }
serde = "1.0"
chrono = "0.4"

[dev-dependencies]
rand = "0.8"
